# the_blockchain_vault

./: Cargo.toml  README.md
asn1_lib/: Cargo.toml
block_producer/: Cargo.toml
block_producer/schema/rdf/: chain.rdf
block_producer/src/: account.rs  account_manager.rs  action_executor.rs  action_manager.rs  block_db_manager.rs  block_tangle_producer.rs  block_tangle_producer_manager.rs  contract.rs  contract_errors.rs  contract_manager.rs  main.rs  producer_client.rs  producer_client_manager.rs  producer_constants.rs  producer_transaction_consumer.rs  tangle.rs  tangle_manager.rs  transaction_constants.rs  transaction_consumer.rs  transaction_errors.rs  transaction_manager.rs  transaction_processor.rs
block_producer/src/mock/: mock_action_executor.rs  mock_action_manager.rs  mock_db_manager.rs  mock_producer_client.rs  mock_producer_client_manager.rs  mock_tangle.rs  mock_tangle_manager.rs  mock_transaction_manager.rs  mock_transaction_processor.rs  mod.rs
block_producer_client/: Cargo.toml
block_producer_client/src/: lib.rs  transaction_processor_client.rs  transaction_processor_client_manager.rs
bootstrap/: Cargo.toml
bootstrap/src/: main.rs
config_lib/: Cargo.toml
config_lib/src/: lib.rs
environment_lib/: Cargo.toml
environment_lib/src/: lib.rs
etc/: config.toml
examples/client/: main.rs
http_api/: Cargo.toml
http_api/src/: http_handler.rs  http_logging.rs  http_manager.rs  http_request_middleware.rs  main.rs
http_api/src/contract/: contract_http_handler.rs  mod.rs
http_api/src/rdf/: mod.rs  rdf_http_handler.rs
http_api/src/transaction/: mod.rs  transaction_http_handler.rs
http_api_messages/: Cargo.toml
http_api_messages/src/: http_api_error.rs  http_api_request.rs  http_api_response.rs  lib.rs
peer2peer_client/: Cargo.toml
peer2peer_client/src/: main.rs
peer2peer_protocol/: Cargo.toml
peer2peer_protocol/src/: lib.rs
peer2peer_protocol/src/constants/: topic.rs
peer2peer_protocol/src/handler/: message.rs  mod.rs
peer2peer_protocol/src/handler/client/: client.rs  connection.rs  consensus.rs  election.rs  grpc_client.rs  heartbeat.rs  mock.rs  mod.rs  network.rs  session.rs  transaction.rs
peer2peer_protocol/src/handler/server/: consensus.rs  grpc_server.rs  mock.rs  mod.rs  network.rs  server.rs  session.rs  socket.rs  transaction.rs
peer2peer_protocol/src/message/: election.rs  hand_shake.rs  message_error.rs  mod.rs  network.rs  transaction.rs
peer2peer_server/: Cargo.toml
peer2peer_server/src/: main.rs
rdf_lib/: Cargo.toml
rdf_lib/src/: lib.rs  store_manager.rs  store_result_set.rs  store_session.rs  store_session_factory.rs  store_state.rs
rdf_lib/src/mock/: mock_store_session.rs  mock_store_session_factory.rs  mock_store_state.rs  mod.rs
rdf_lib/src/oxigraph_db/: mod.rs  oxigraph_error.rs  oxigraph_store_manager.rs  oxigraph_store_result_set.rs  oxigraph_store_session.rs  oxigraph_store_session_factory.rs  oxigraph_store_state.rs
rdf_lib/src/schema/: constants.rs
rdf_lib/test/data/: small_test_dataset_50_triples.ttl
rdf_store/: Cargo.toml
rdf_store/src/: block_consumer.rs  block_processor.rs  disk_store_manager.rs  main.rs  mock_query_processor.rs  mock_query_processor_manager.rs  mock_store_manager.rs  query_consumer.rs  query_processor.rs  query_processor_manager.rs  store_manager.rs
rdf_store_client/: Cargo.toml
rdf_store_client/src/: lib.rs  store_client.rs  store_client_manager.rs
rdf_store_client/src/message/: mod.rs  query.rs  topics.rs
rdf_store_client/src/mock/: mock_store_client.rs  mock_store_client_manager.rs  mod.rs
rdf_store_client/src/spool_store/: mod.rs  spool_store_client.rs  spool_store_client_manager.rs
rest_server/: Cargo.toml
rest_server/src/: server.rs
rest_stub/: Cargo.toml  README.md
rest_stub/api/: openapi.yaml
rest_stub/docs/: default_api.md
rest_stub/src/: lib.rs
runner/: Cargo.toml
runner/src/: main.rs
sandbox/: Cargo.toml
sandbox/src/: http_request_consumer.rs  main.rs  request_consumer.rs  sandbox_error.rs  wasm_executor.rs  wasm_executor_manager.rs  wasm_handler.rs  wasm_handler_factory.rs
sandbox_client/: Cargo.toml
sandbox_client/src/: http_request.rs  lib.rs  request_manager.rs  sandbox_topics.rs  transaction_request.rs
sandbox_client/src/message/: mod.rs  sandbox_http_message.rs  sandbox_http_message_wrapper.rs  sandbox_message.rs  sandbox_message_error.rs  sandbox_message_wrapper.rs
sandbox_client/src/mock/: mock_http_request.rs  mock_request_manager.rs  mock_transaction_request.rs  mod.rs
sandbox_client/src/spool_sandbox/: mod.rs  spool_http_request.rs  spool_request_manager.rs  spool_transaction_request.rs
spool_client/: Cargo.toml  build.rs
spool_client/src/: lib.rs  spool_connection.rs  spool_connection_grpc.rs  spool_connection_manager.rs  spool_connection_manager_grpc.rs  spool_connection_manager_mock.rs  spool_connection_mock.rs  spool_errors.rs
spool_client/tests/: test_spool_connection_grpc.rs
spool_server/: Cargo.toml  build.rs
spool_server/proto/: spool.proto
spool_server/src/: lib.rs  main.rs  spooler_impl.rs
tmp/block/: 000055.sst  IDENTITY  LOG  LOG.old.1700592537066320  LOG.old.1700592948852072  LOG.old.1700637064432433  LOG.old.1700733514159208  LOG.old.1700733686277546  LOG.old.1700760286888990  LOG.old.1700926206417329  LOG.old.1700926227892529  LOG.old.1700939647060287  LOG.old.1700979469083778  LOG.old.1701004310100704  LOG.old.1701004919221894  LOG.old.1701016557096141  LOG.old.1701016600142307  LOG.old.1701016771808541  LOG.old.1701017112291963  LOG.old.1701938430250392  LOG.old.1701944373795807  LOG.old.1701944499002451  LOG.old.1701945277165545  LOG.old.1702638765788538  LOG.old.1702640606295679  LOG.old.1702646826559342  LOG.old.1702739864058741  LOG.old.1702744541341337  LOG.old.1702745863325129  LOG.old.1702745963029325  LOG.old.1702746020296688  LOG.old.1703152020898747  LOG.old.1703154095616084  LOG.old.1703154156915666  LOG.old.1703258238984710  LOG.old.1703494782827266  LOG.old.1703518401265530  LOG.old.1703826530429378  LOG.old.1703840585015649  LOG.old.1703953045329483  (+37 more)
(+76 files in other folders)
