[workspace]

members = [
    "environment_lib",
    "config_lib",
    "asn1_lib",
    "runner",
    "rdf_lib",
    "spool_server",
    "spool_client",
    "rdf_store_client",
    "peer2peer_protocol",
    "peer2peer_client",
    "peer2peer_server",
    "block_producer",
    "rdf_store",
    "http_api",
]
