[workspace]

members = [
    "environment_lib",
    "config_lib",
    "asn1_lib",
    "runner",
    "rdf_lib",
    "spool_server",
    "spool_client",
    "rdf_store_client",
    "peer2peer_protocol",
    "peer2peer_client",
    "peer2peer_server",
    "sandbox_client",
    "sandbox",
    "block_producer_client",
    "block_producer",
    "rdf_store",
    "http_api_messages",
    "http_api",
    "rest_stub",
    "rest_server",
]
