[workspace]

members = [
    "environment_lib",
    "config_lib",
    "asn1_lib",
    "runner",
    "rdf_lib",
    "spool_server",
    "spool_client",
    "rdf_store_client",
    "peer2peer_protocol",
    "peer2peer_client",
    "peer2peer_server",
    "sandbox_client",
    "sandbox",
    "block_producer_client",
    "block_producer",
    "rdf_store",
    "http_api_messages",
    "http_api",
    "rest_stub",
    "rest_server",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oxigraph = "0.3.21"
async-trait = "0.1.77"
chrono = "0.4.34"
rasn = "0.7.0"
