[package]
name = "bootstrap"
version = "0.1.0"
authors = ["Brett Chaldecott <brett.chaldecott@gmail.com>"]
edition = "2021"

[dependencies]
wasmtime = "0.31.0"
tokio = { version = "1.5", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
bincode = "1.3.3"
reqwest = { version = "0.11", features = ["json"] }
