[package]
name = "http_api"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.14"
futures-util = "0.3"
futures = "0.3.30"
config_lib = { path="../config_lib"}
peer2peer_protocol = { path="../peer2peer_protocol"}
spool_client = { path="../spool_client"}
asn1_lib = { path="../asn1_lib"}
rdf_lib = { path="../rdf_lib" }
rdf_store_client = { path="../rdf_store_client"}
sandbox_client = { path="../sandbox_client"}
actix-web = "4.0"
actix-service = "2.0"
async-trait = "0.1.76"
http_api_messages = { path="../http_api_messages" }
bytes = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"