[package]
name = "peer2peer_protocol"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.16"
async-tungstenite = "0.16"
derive-new = "0.5"
chrono = { version="0.4", features = ["serde"] }
tokio-tungstenite = "0.14"
futures-util = "0.3"
futures = "0.3"
spool_client = { path="../spool_client"}