[package]
name = "peer2peer_server"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.14"
futures = "0.3"
config_lib = { path="../config_lib"}
peer2peer_protocol = { path="../peer2peer_protocol"}

