[package]
name = "rdf_lib"
version = "0.1.0"
authors = ["Brett Chaldecott <brett.chaldecott@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
asn1_lib = { path="../asn1_lib"}
environment_lib = { path="../environment_lib"}
config_lib = { path="../config_lib"}
oxigraph = "0.3.20"
rasn = "0.7.0"
thread_local = "1.1.3"
async-trait = "0.1.76"