[package]
name = "rdf_lib"
version = "0.1.0"
authors = ["Brett Chaldecott <brett.chaldecott@gmail.com>"]
edition = "2018"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
asn1_lib = { path="../asn1_lib"}
environment_lib = { path="../environment_lib"}
config_lib = { path="../config_lib"}
oxigraph.workspace = true
rasn.workspace = true
thread_local = "1.1.3"
async-trait.workspace = true