[package]
name = "rdf_store_client"
version = "0.1.0"
authors = ["Brett Chaldecott <brett.chaldecott@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
asn1_lib = { path="../asn1_lib"}
environment_lib = { path="../environment_lib" }
config_lib = { path="../config_lib"}
spool_client = { path="../spool_client"}
rdf_lib = { path="../rdf_lib" }
oxigraph = "0.3.20"
async-trait = "0.1.76"