[package]
name = "sandbox_client"
version = "0.1.0"
authors = ["Brett Chaldecott <brett.chaldecott@gmail.com>"]
edition = "2021"

[dependencies]
wasmtime = "17.0.1"
tokio = { version = "1.5", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0"
bincode = "1.3.3"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.30"
asn1_lib = { path="../asn1_lib"}
environment_lib = { path="../environment_lib"}
config_lib = { path="../config_lib"}
spool_client = { path="../spool_client"}
oxigraph = "0.3.20"
peer2peer_protocol = { path="../peer2peer_protocol"}
rdf_lib = { path="../rdf_lib"}
rdf_store_client = { path="../rdf_store_client"}
async-trait = "0.1.76"
chrono = "0.4"
rasn = "0.7.0"
derive-new = "0.5"