[package]
name = "spool_client"
version = "0.1.0"
authors = ["Brett Chaldecott <brett.chaldecott@gmail.com>"]
edition = "2018"

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1", features = ["full"] }
http = "0.2"
spool_server = { path="../spool_server"}
async-trait = "0.1"

[build-dependencies]
prost-build = "0.9"
tonic-build = "0.5"